cabal-version: 2.2
name: ext-stats
version: 0

executable hackage-count
  main-is: hackage-count.hs
  build-depends: base
  build-depends: containers (== 0.6.2.1)
  build-depends: extensions (== 0.0.0.1)
  build-depends: filepath (== 1.4.2.1)
  build-depends: directory (== 1.3.6.0)
  default-language: Haskell2010

executable merge
  main-is: merge.hs
  build-depends: base
  build-depends: containers (== 0.6.2.1)
  build-depends: cassava
  build-depends: bytestring
  build-depends: vector
  build-depends: split
  build-depends: filepath (== 1.4.2.1)
  build-depends: directory (== 1.3.6.0)
  build-depends: regex-tdfa ^>= 1.3.1.0
  default-language: Haskell2010
